fix card programs spacing

--- a/sass/acf-blocks/_programs.sass
+++ b/sass/acf-blocks/_programs.sass
@@ -1,4 +1,6 @@
 section.programs
+    .container--medium
+        max-width: calc(1449px + 40px + 40px)
     .programs
         &__wrap
         &__title
